# sourceIdentify

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml
cmt/: .cvsignore  cleanup.csh  cleanup.sh  requirements  rh9_gcc32.make  setup.csh  setup.sh
data/: 1rxs_50.tsv  3EG_all.tsv  cygob2_egret_3eg.tsv  cygob2_heao_x.tsv  cygob2_integral_1ibis.tsv  cygob2_integral_ref.tsv  cygob2_iras_ipac_pt.tsv  cygob2_iras_ipac_ser.tsv  cygob2_rosat_1rxh.tsv  cygob2_rosat_1rxs.tsv  cygob2_rosat_2rxp.tsv  cygob2_rosat_faint.tsv  cygob2_rosat_quasars.tsv  cygob2_rosat_wd.tsv  cygob2_rosat_wgacat.tsv  cygob2_veron_agn.tsv  cygob2_veron_bllac.tsv  cygob2_veron_qso.tsv  veron_agn.tsv  veron_bllac.tsv  veron_qso.tsv
data/outref/: test1.dump  test1.fits  test2.fits
doc/: release.notes  used_packages.html
doc/doxy-html/: _catalogue_8cxx-source.html  _catalogue_8cxx.html  _catalogue_8cxx__incl.dot  _catalogue_8h-source.html  _catalogue_8h.html  _catalogue_8h__dep__incl.dot  _catalogue_8h__incl.dot  _log_8cxx-source.html  _log_8cxx.html  _log_8cxx__incl.dot  _log_8h-source.html  _log_8h.html  _log_8h__dep__incl.dot  _log_8h__incl.dot  _parameters_8cxx-source.html  _parameters_8cxx.html  _parameters_8cxx__incl.dot  _parameters_8h-source.html  _parameters_8h.html  _parameters_8h__dep__incl.dot  _parameters_8h__incl.dot  annotated.html  classapplication.html  (+31 more)
pfiles/: gtsrcid.par  sourceIdentify.par
python/: srcid.py
sourceIdentify/: Catalogue.h  Log.h  Parameters.h  sourceIdentify.h
src/: Catalogue.cxx  Log.cxx  Parameters.cxx  mainpage.h  sourceIdentify.cxx
(+44 files in other folders)
